--- a/index.html
+++ b/index.html
@@ -17,21 +17,21 @@
         <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300,300i,400,400i,700,700i" rel="stylesheet">
 
 
-        <link rel="stylesheet" href="slick.css">
-        <link rel="stylesheet" href="slick-theme.css">
-        <link rel="stylesheet" href="animate.css">
-        <link rel="stylesheet" href="fonticons.css">
-        <link rel="stylesheet" href="font-awesome.min.css">
-        <link rel="stylesheet" href="bootstrap.css">
-        <link rel="stylesheet" href="magnific-popup.css">
-        <link rel="stylesheet" href="bootsnav.css">
+        <link rel="stylesheet" href="/slick.css">
+        <link rel="stylesheet" href="/slick-theme.css">
+        <link rel="stylesheet" href="/animate.css">
+        <link rel="stylesheet" href="/fonticons.css">
+        <link rel="stylesheet" href="/font-awesome.min.css">
+        <link rel="stylesheet" href="/bootstrap.css">
+        <link rel="stylesheet" href="/magnific-popup.css">
+        <link rel="stylesheet" href="./public/bootsnav.css">
 
 
         <!--For Plugins external css-->
         <!--<link rel="stylesheet" href="assets/css/plugins.css" />-->
 
         <!--Theme custom css -->
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="/style.css">
         <!--<link rel="stylesheet" href="assets/css/colors/maron.css">-->
 
         <!--Theme Responsive css-->
